# ASD-labs

./: .gitignore  README.md  main.c
1-1.6/: main.c
1.6/: main.c
2-2.1/: logs-loop.c  logs-recursionDepth.c  logs-recursionHeight.c  logs-recursionMixed.c  loop.c  main.c  recursionDepth.c  recursionHeight.c  recursionMixed.c
2-2.1/logs-functions/: logs-loop.c  logs-recursionDepth.c  logs-recursionHeight.c  logs-recursionMixed.c
2-2.1/report/: first.c  second.c  third.c
2-2.1/utils/: compare.c
2-2.2/: List.c  main.c
2-2.2/report/: List.c  main.c
2-2.2/utils/: print_color.c
2-2.3/: App.c  Point.c  app.c  draw_graph.c  graph_coords.c  main.c  matrix.c
2-2.3/Report/: example.webm
2-2.4/: CMakeLists.txt
2-2.4/src/: main.c
2-2.4/src/app/: app.c  draw_graph.c
2-2.4/src/headers/: Matrix.h  X11.h
2-2.4/src/matrix/: graph_characteristics.c  graph_coords.c  matrix.c
2-2.5/: CMakeLists.txt
2-2.5/report/: example.webm
2-2.5/src/: main.c  traversal_algorithms.c
2-2.5/src/Utils/: deque.c  deque.h  queue.c  queue.h
2-2.5/src/app/: app.c  graph_coords.c
2-2.5/src/drawing/: draw_graph.c  draw_graph.h  graph_coords.c  graph_coords.h
2-2.5/src/headers/: Point.h  X11.h
2-2.5/src/matrix/: matrix.c  matrix.h  traversal_algorithms.c
2-2.6/: CMakeLists.txt
2-2.6/report/: example.webm
2-2.6/src/: main.c  prim's_alghoritm.c  traversal_algorithms.c
2-2.6/src/Utils/: MinHeap.c  MinHeap.h  list.c  list.h
2-2.6/src/app/: app.h
2-2.6/src/drawing/: draw_graph.c  draw_graph.h  graph_coords.c
2-2.6/src/graph/: graph.c  graph.h
2-2.6/src/matrix/: matrix.c  matrix.h
2.1/: main.c
2.2/: fill.js  main.c
